--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -69,7 +69,7 @@ where, for $1\le i\le n$, $l_i$ is the number of atom occurrences in $\gamma_{k,
 (  4,-10)*{\afaiuex{}{}{}{}{}{}{20}{4}};
 (-12, -8)*{\afvjum8{}{\boldsymbol\iota}};
 }
-\quad\to_\frmis\quad
+\quad\to_{\frmis_n}\quad
 \atomicflow{
 (-12, 56)*{\afvjm4};
 (-12, 50)*{\copy\contrup};
@@ -139,11 +139,11 @@ where, for $1\le i\le n$, $l_i$ is the number of atom occurrences in $\gamma_{k,
 
 %------------------------------------------------------------------
 \begin{theorem}\label{theorem:SoundMultipleIsolatedSubflowsRemoval}
-Reduction\/ $\to_\frmis$ is sound; moreover, if\/ $\Phi\to_\frmis\Psi$, then the size of $\Psi$ depends at most cubically on the size of $\Phi$ and at most quadratically on $\max\{\size{\Gammasf_1},\dots,\size{\Gammasf_N}\}$.
+For every $n>0$, reduction\/ $\to_{\frmis_n}$ is sound; moreover, if\/ $\Phi\to_{\frmis_n}\Psi$, then the size of $\Psi$ depends at most cubically on the size of $\Phi$ and at most quadratically on $\max\{\size{\Gammasf_1},\dots,\size{\Gammasf_N}\}$.
 \end{theorem}
 
 \begin{proof}
-Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\frmis\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figures in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}.
+Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_{\frmis_n}\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figures in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}.
 
 Since each of $\psi_1$, $\dots$, $\psi_n$ is connected, we assume, by Remark~\vref{remark:AlternativeAiDecomposedForm}, that the following derivation is an $\ai$-decomposed form of $\Phi$:
 \[
@@ -347,7 +347,7 @@ In the following we refer to the figure in Definition~\ref{definition:MultipleIs
 %--------------------------------
 \newcommand{\MISR}{\mathsf{MISR}}
 \begin{definition}\label{definition:MultipleIsolatedSubflowsRemover}
-For every $n\ge0$, given the atoms, formulae and derivations described in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}, the \emph{Multiple Isolated Subflow Remover}, $\MISR_n$, is an operator whose arguments are atoms $a_1$, $\dots$, $a_n$ (that, without loss of generality, we assume coincide with the atoms given in Definition~\ref{definition:MultipleIsolatedSubflowsRemoval}), and a derivation $\Phi$ that is in simple form, but is not weakly streamlined, with respect to $a_1$, $\dots$, $a_n$, with $\ai$-decomposed form
+For every $n>0$, given the atoms, formulae and derivations described in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}, the \emph{Multiple Isolated Subflow Remover}, $\MISR_n$, is an operator whose arguments are atoms $a_1$, $\dots$, $a_n$ (that, without loss of generality, we assume coincide with the atoms given in Definition~\ref{definition:MultipleIsolatedSubflowsRemoval}), and a derivation $\Phi$ that is in simple form, but is not weakly streamlined, with respect to $a_1$, $\dots$, $a_n$, with $\ai$-decomposed form
 \[
 \vlder{\Phi'}{}
 {
