Remarked that is is base case of mis

--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -137,6 +137,23 @@ where, for $1\le i\le n$, $l_i$ is the number of atom occurrences in $\gamma_{k,
 \end{definition}
 %---------------
 
+%--------------------------------------------------------------
+\begin{remark}\label{remark:BaseMultipleIsolatedSubflowRemoval}
+Let $N=1$ and
+\[
+\Gammasf_1\;=\;
+\vlinf{=}{}
+{
+ \vls[a_1.\fff]
+}
+{
+ \vls(a_1.\ttt)
+}\quad,
+\]
+then $\to_{\frmis_1}=\to_\fris$.
+\end{remark}
+%-----------
+
 %------------------------------------------------------------------
 \begin{theorem}\label{theorem:SoundMultipleIsolatedSubflowsRemoval}
 For every $n>0$, reduction\/ $\to_{\frmis_n}$ is sound; moreover, if\/ $\Phi\to_{\frmis_n}\Psi$, then the size of $\Psi$ depends at most cubically on the size of $\Phi$ and at most quadratically on $\max\{\size{\Gammasf_1},\dots,\size{\Gammasf_N}\}$.
