--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -2,29 +2,29 @@
 
 \section{System $\SKS$}
 
-\newcommand{\ai   }{\mathsf{ai}}
-\newcommand{\aw   }{\mathsf{aw}}
-\newcommand{\ac   }{\mathsf{ac}}
-\newcommand{\aid  }{\ai{\downarrow}}
-\newcommand{\awd  }{\aw{\downarrow}}
-\newcommand{\acd  }{\ac{\downarrow}}
-\newcommand{\aiu  }{\ai{\uparrow}}
-\newcommand{\awu  }{\aw{\uparrow}}
-\newcommand{\acu  }{\ac{\uparrow}}
+\newcommand{\ai   }{{\mathsf{ai}}}
+\newcommand{\aw   }{{\mathsf{aw}}}
+\newcommand{\ac   }{{\mathsf{ac}}}
+\newcommand{\aid  }{{\ai{\downarrow}}}
+\newcommand{\awd  }{{\aw{\downarrow}}}
+\newcommand{\acd  }{{\ac{\downarrow}}}
+\newcommand{\aiu  }{{\ai{\uparrow}}}
+\newcommand{\awu  }{{\aw{\uparrow}}}
+\newcommand{\acu  }{{\ac{\uparrow}}}
 \newcommand{\swi  }{\mathsf{s}}
 \newcommand{\med  }{\mathsf{m}}
-\newcommand{\asor }{=_\mathsf{a}{\downarrow}}
-\newcommand{\asand}{=_\mathsf{a}{\uparrow}}
-\newcommand{\coor }{=_{\vee\mathsf{c}}}
-\newcommand{\coand}{=_{\wedge\mathsf{c}}}
-\newcommand{\fffd }{{=_{\fff}}{\downarrow}}
-\newcommand{\fffu }{{=_{\fff}}{\uparrow}}
-\newcommand{\tttd }{{=_{\ttt}}{\downarrow}}
-\newcommand{\tttu }{{=_{\ttt}}{\uparrow}}
-\newcommand{\tttord }{{=_{\ttt\vee}}{\downarrow}}
-\newcommand{\fffandd }{{=_{\fff\wedge}}{\downarrow}}
-\newcommand{\tttoru }{{=_{\ttt\vee}}{\uparrow}}
-\newcommand{\fffandu }{{=_{\fff\wedge}}{\uparrow}}
+\newcommand{\asor }{{=_\mathsf{a}{\downarrow}}}
+\newcommand{\asand}{{=_\mathsf{a}{\uparrow}}}
+\newcommand{\coor }{{=_{\vee\mathsf{c}}}}
+\newcommand{\coand}{{=_{\wedge\mathsf{c}}}}
+\newcommand{\fffd }{{{=_{\fff}}{\downarrow}}}
+\newcommand{\fffu }{{{=_{\fff}}{\uparrow}}}
+\newcommand{\tttd }{{{=_{\ttt}}{\downarrow}}}
+\newcommand{\tttu }{{{=_{\ttt}}{\uparrow}}}
+\newcommand{\tttord }{{{=_{\ttt\vee}}{\downarrow}}}
+\newcommand{\fffandd }{{{=_{\fff\wedge}}{\downarrow}}}
+\newcommand{\tttoru }{{{=_{\ttt\vee}}{\uparrow}}}
+\newcommand{\fffandu }{{{=_{\fff\wedge}}{\uparrow}}}
 
 
 \begin{definition}\label{definition:SKS}
