Fixed labels and references

--- a/global_transformations/path_breaker.tex
+++ b/global_transformations/path_breaker.tex
@@ -120,7 +120,7 @@ where the evidenced interaction and cut vertices belong to the same connected co
 \TODO{Alessio: We cannot identify edges if they do not belong to the same connected component (they might be mapped to from occurrences of different atoms. I will remark somewhere...}
 
 %----------------------------------------------
-\begin{theorem}\label{theorem:PathBreakerSound}
+\begin{theorem}\label{theorem:SoundPathBreaker}
 Reduction $\to_\frpb$ is sound; moreover, if\/ $\Phi\to_\frpb\Psi$, then the size of $\Psi$ depends at most cubically on the size of $\Phi$.
 \end{theorem}
 
@@ -429,7 +429,7 @@ We then define $\PB(\Phi,a)$ to be such that $\Psi\to_\frpb\PB(\Phi,a)$, where $
 %---------------
 
 %------------------------------------------------------------
-\begin{proposition}\label{proposition:IsolatedSubflowRemover}
+\begin{proposition}\label{proposition:PathBreaker}
 Given an atom $a$, and a derivation $\Phi$ that is not weakly streamlined with respect to both $a$ and $\bar a$,
 \begin{enumerate}
 \item $\PB(\Phi,a)$ is weakly streamlined with respect to both $a$ and $\bar a$;
