--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -109,7 +109,7 @@ instead of
  }
 }\quad.
 \]
-See the proofs of Theorems~\vrefrange{theorem:PathBreakerSound}{theorem:MultipleIsolatedSubflowsRemovalMaybeSound} for more examples of implicit equations.
+See the proofs of Theorems~\vrefrange{theorem:SoundPathBreaker}{theorem:SoundMultipleIsolatedSubflowsRemoval} for more examples of implicit equations.
 \end{remark}
 
 \begin{lemma}\label{lemma:SuperSwitch}
