--- a/global_transformations/path_breaker.tex
+++ b/global_transformations/path_breaker.tex
@@ -438,13 +438,11 @@ Given an atom $a$, and a derivation $\Phi$ that is not weakly streamlined with r
 \end{enumerate}
 \end{proposition}
 
-\TODO{Prove:}
-
 \begin{proof}
-The statements follow by
+Let $\phi$, $\psi$, $\phi'$, $\psi'$, $\phi''$ and $\psi''$ be the atomic flows given in Definition~\ref{definition:DerPathBreaker} and let $\nu_\aid$ (resp., $\nu_\aiu$) be the evidenced interaction (resp., cut) vertex in $\psi''$, then
 \begin{enumerate}
-\item Definition~\vref{definition:DerStreamlined} and Lemma~\vref{lemma:PathBreaker};
-\item Definitions~\ref{definition:DerStreamlined} and Lemma~\ref{lemma:PathBreaker};
+\item by Definition~\ref{definition:DerPathBreaker} all the paths from an interaction (resp., cut) vertex whose edges are mapped to from $a$ or $\bar a$ must start from $\nu_\aid$ (resp., $\nu_\aiu$). In Definition~\ref{definition:PathBreaker} we have colored these edges in red (resp., green). Since the red and the green edges never coincid, there are no paths from $\nu_\aid$ to $\nu_\aiu$;
+\item if there is a path from an interaction (resp., cut) vertex in the atomic flow of $\PB(\Phi,a)$ whose edges are mapped to from $b$, then, by Lemma~\vref{lemma:PathBreaker}, there is a path from an interaction (resp., cut) vertex in $\phi$ or $\psi$, so also in $\phi'$ or $\psi'$, whose edges are mapped to from $b$. Hence, the statement follows by contradiction; and
 \item the statement follows by Theorem~\vref{theorem:SoundPathBreaker}.
 \end{enumerate}
 \end{proof}
