--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -644,13 +644,15 @@ Given the atoms, formulae and derivations described in Definition~\vref{definiti
 \end{enumerate}
 \end{proposition}
 
-\TODO{Prove:}
-
 \begin{proof}
-The statements follow by
+Let $\phi$, $\psi_1$, $\dots$, $\psi_n$, $\phi'$, $\psi'_1$, $\dots$, $\psi'_n$, $\phi''$ and $\psi''$ be the atomic flows given in Definition~\ref{definition:MultipleIsolatedSubflowsRemover}, then
 \begin{enumerate}
-\item Definition~\vref{definition:DerStreamlined} and Lemma~\vref{lemma:MultipleIsolatedSubflowsRemovalPaths};
-\item Definitions~\ref{definition:DerStreamlined} and \ref{definition:DerSimpleForm}, and Lemma~\ref{lemma:MultipleIsolatedSubflowsRemovalPaths};
+\item by definition there is no path in $\phi$ from an interaction to a cut vertex whose edges are mapped to from instances of one of $a_1$, $\dots$, $a_n$. By Lemma~\vref{lemma:MultipleIsolatedSubflowsRemovalPaths}, we know that if there is a path from an interaction to a cut vertex in the atomic flow of $\MISR_n(\Phi,a_1,\dots,a_n)$ whose edges are mapped to from instances of one of $a_1$, $\dots$, $a_n$, then there must be a path from an interaction to a cut vertex in $\phi$ whose edges are mapped to from instances of one of $a_1$, $\dots$, $a_n$. Hence, the statement follows by contradiction;
+\item
+\begin{itemize}
+ \item if there is a path from an interaction (resp., cut) vertex in the atomic flow of $\MISR_n(\Phi,a_1,\dots,a_n)$ whose edges are mapped to from $b$, then, by Lemma~\ref{lemma:MultipleIsolatedSubflowsRemovalPaths}, there is a path from an interaction (resp., cut) vertex in $\phi$, so also in $\phi'$, whose edges are mapped to from $b$. Hence, the statement follows by contradiction; and
+ \item if there is an interaction (reps., cut) vertex $\nu$ and a cut (resp., interaction) vertex $\hat\nu$ in the atomic flow of $\MISR_n(\Phi,a_1,\dots,a_n)$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from $b$, then, by Lemma~\ref{lemma:MultipleIsolatedSubflowsRemovalPaths}, there is an interaction (reps., cut) vertex $\nu'$ and a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$ such that there is a path from $\nu$ to $\hat\nu$ and a path from $\nu$ to $\bot$ (resp., $\top$), both of whose edges are mapped to from $b$. Furthermore, since we can assume that $b$ is not any of $a_1$, $\dots$, $a_n$ or their duals, $\phi$ restricted to $b$ equals $\phi'$ restricted to $b$. Hence, the statement follows by contradiction.
+\end{itemize}
 \item the statement follows by Theorem~\vref{theorem:SoundMultipleIsolatedSubflowsRemoval}.
 \end{enumerate}
 \end{proof}
