--- a/global_transformations/four_boxes.tex
+++ b/global_transformations/four_boxes.tex
@@ -3,7 +3,7 @@
 %--------------------------------
 \newcommand{\frfb}{{\mathsf{fb}}}
 \begin{definition}\label{definition:FourBoxes}
-We define the reduction $\to_\frfb$ (where $\frfb$ stands for \emph{four boxes}) as follows, for any atomic flows $\phi$ and $\psi$ that do not contain any interaction or cut vertices:
+We define the reduction $\to_\frfb$ (where $\frfb$ stands for \emph{four boxes}\index{four boxes reduction}) as follows, for any atomic flows $\phi$ and $\psi$ that do not contain any interaction or cut vertices:
 \[
 \atomicflow{
 (-8, 6)*{\afvjdm4{\boldsymbol{\epsilon_1}}{}};
@@ -412,7 +412,7 @@ We refer to the figure in Definition~\vref{definition:FourBoxes}. Let the subflo
 %----------------------------------
 \newcommand{\Simpl}{\mathsf{Simpl}}
 \begin{definition}\label{definition:DerSimpleForm}
-Given a derivation $\Phi$ with atomic flow $\phi$ and a polarity assignment $\pi$, let $\Psi$ with atomic flow $\psi$ be the derivation obtained in the proof of Theorem~\ref{theorem:SoundFourBoxes}, such that $\phi\to_\frfb\psi$, then we say that $\Psi$ is \emph{the} (\emph{canonical}) \emph{simple form of\/ $\Phi$ with respect to $\pi$}, denoted $\Simpl(\Phi,\pi)$.
+Given a derivation $\Phi$ with atomic flow $\phi$ and a polarity assignment $\pi$, let $\Psi$ with atomic flow $\psi$ be the derivation obtained in the proof of Theorem~\ref{theorem:SoundFourBoxes}, such that $\phi\to_\frfb\psi$, then we say that $\Psi$ is \emph{the} (\emph{canonical}) \emph{simple form of\/ $\Phi$ with respect to $\pi$}\index{simple form!derivation}, denoted $\Simpl(\Phi,\pi)$.
 \end{definition}
 %---------------
 
