--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -1,7 +1,7 @@
 %--------------------------------
 \newcommand{\fris}{{\mathsf{is}}}
 \begin{definition}\label{definition:IsolatedSubflowRemoval}
-We define the reduction $\to_\fris$ (where $\fris$ stands for \emph{isolated subflow}) as follows, for any atomic flow $\phi$ and any connected atomic flow $\psi$ that does not contain identity or cut vertices:
+We define the reduction $\to_\fris$ (where $\fris$ stands for \emph{isolated subflow}\index{Isolated Subflow Remover!reduction}) as follows, for any atomic flow $\phi$ and any connected atomic flow $\psi$ that does not contain identity or cut vertices:
 \[
 \atomicflow{
 (-8, 6)*{\afvjdm4{\boldsymbol\epsilon}{}};
@@ -163,7 +163,7 @@ In the following we refer to the figure in Definition~\ref{definition:IsolatedSu
 %------------------------------
 \newcommand{\ISR}{\mathsf{ISR}}
 \begin{definition}\label{definition:IsolatedSubflowRemover}
-The \emph{Isolated Subflow Remover}, $\ISR$, is an operator whose arguments are an atom $a$, and a derivation $\Phi$ that is in simple form, but is not weakly streamlined, with respect to $a$, with $\ai$-decomposed form
+The \emph{Isolated Subflow Remover}\index{Isolated Subflow Remover!operator}, $\ISR$, is an operator whose arguments are an atom $a$, and a derivation $\Phi$ that is in simple form, but is not weakly streamlined, with respect to $a$, with $\ai$-decomposed form
 \[
 \vlder{\Phi'}{}
 {
