--- a/global_transformations/path_breaker.tex
+++ b/global_transformations/path_breaker.tex
@@ -3,7 +3,7 @@
 %--------------------------------
 \newcommand{\frpb}{{\mathsf{pb}}}
 \begin{definition}\label{definition:PathBreaker}
-We define the reduction $\to_\frpb$ (where $\frpb$ stands for \emph{path breaker}) as follows, for any atomic flows $\phi$ and $\psi$:
+We define the reduction $\to_\frpb$ (where $\frpb$ stands for \emph{path breaker}\index{Path Breaker!reduction}) as follows, for any atomic flows $\phi$ and $\psi$:
 \[
 \atomicflow
 {
@@ -263,7 +263,7 @@ In the following we refer to the figure in Definition~\ref{definition:PathBreake
 %----------------------------
 \newcommand{\PB}{\mathsf{PB}}
 \begin{definition}\label{definition:DerPathBreaker}
-The \emph{Path Breaker}, $\PB$, is an operator whose arguments are an atom $a$, and a derivation $\Phi$ that is not weakly streamlined with respect to $a$ or with respect to $\bar a$, with $\ai$-decomposed form 
+The \emph{Path Breaker}\index{Path Breaker!operator}, $\PB$, is an operator whose arguments are an atom $a$, and a derivation $\Phi$ that is not weakly streamlined with respect to $a$ or with respect to $\bar a$, with $\ai$-decomposed form 
 \[
 \vlder{\Phi'}{}
 {
