--- a/global_transformations/threshold_formulae.tex
+++ b/global_transformations/threshold_formulae.tex
@@ -15,7 +15,7 @@ The following class of threshold formulae, which we found to work for system $\S
 \renewcommand{\th}[2]{\mathop{\thetaup_{#1}^{#2}}}
 %-------------------------------------------------------------------------------
 \begin{definition}\label{definition:ThresholdFormulae}
-Consider $n>0$, distinct atoms $a_1$, \dots, $a_n$, and let $p=\lfloor n/2\rfloor$ and $q=n-p$; for $k\ge0$, we define the \emph{threshold formulae\/} $\th kn\avec1n$ as follows:
+Consider $n>0$, distinct atoms $a_1$, \dots, $a_n$, and let $p=\lfloor n/2\rfloor$ and $q=n-p$; for $k\ge0$, we define the \emph{threshold formulae\/}\index{threshold!formulae} $\th kn\avec1n$ as follows:
 \begin{itemize}
 %---------------------------------------
 \item for any $n>0$ let $\th0n\avec1n\equiv\ttt$;
@@ -777,8 +777,8 @@ and\/ $\size{\Gammasf^n_k\avec1n}$ is $n^{\Ord{\log n}}$.
 \begin{definition}\label{definition:QuasipolynomialMultipleSubflowRemoval}
 For every $n>0$, we define
 \begin{itemize}
-\item the reduction $\to_{\frqmis_n}$ (where $\frqmis$ stands for \emph{quasipolynomial multiple isolated subflows}); and
-\item the \emph{quasipolynomial multiple isolated subflow remover}, $\QMISR_n$,
+\item the reduction $\to_{\frqmis_n}$ (where $\frqmis$ stands for \emph{quasipolynomial multiple isolated subflows}\index{Quasipolynomial Multiple Isolated Subflows Remover!reduction}); and
+\item the \emph{Quasipolynomial Multiple Isolated Subflows Remover}\index{Quasipolynomial Multiple Isolated Subflows Remover!operator}, $\QMISR_n$,
 \end{itemize}
 as follows: Given atoms $\avec 1n$, instantiate $\to_{\frmis_n}$ and $\MISR_n$ with
 \begin{itemize}
