--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -12,7 +12,7 @@ An atomic flow is
 \begin{enumerate}
 %---
 \item\label{definition:FlowNormalForms:item:SimpleForm}
-\emph{on simple form with respect to the polarity assignment $\pi$} if it can be represented as
+\emph{on simple form with respect to the polarity assignment $\pi$}\index{simple form!flow} if it can be represented as
 \[
 \atomicflow{
 (-20, 14)*{\afvjm4};
@@ -68,7 +68,7 @@ An atomic flow is
 \]
 %---
 \item\label{definition:FlowNormalForms:item:WeaklyStreamlinedPolarity}
-\emph{weakly streamlined with respect to the polarity assignment $\pi$} if it can be represented as
+\emph{weakly streamlined with respect to the polarity assignment $\pi$}\index{streamlined!weakly!with respect to polarity assignment} if it can be represented as
 \[
 \atomicflow{
 (-20, 14)*{\afvjm4};
@@ -120,7 +120,7 @@ An atomic flow is
 \]
 %---
 \item\label{definition:FlowNormalForms:item:WeaklyStreamlined}
-\emph{weakly streamlined} if it can be represented as
+\emph{weakly streamlined}\index{streamlined!weakly} if it can be represented as
 \[
 \atomicflow{
 ( -8, 11.5)*{\afvjm4};
@@ -144,7 +144,7 @@ An atomic flow is
 \]
 %---
 \item\label{definition:FlowNormalForms:item:Streamlined}
-\emph{streamlined} if it can be represented as
+\emph{streamlined}\index{streamlined} if it can be represented as
 \[
 \atomicflow{
 ( -5, 11.5)*{\afvjm4};
@@ -168,7 +168,7 @@ An atomic flow is
 \]
 %---
 \item\label{definition:FlowNormalForms:item:SuperStreamlined}
-\emph{super streamlined} if it can be represented as
+\emph{super streamlined}\index{streamlined!super} if it can be represented as
 \[
 \atomicflow{
 (-12,  9.5)*{\afawum{}{}{}{}{}{}};
@@ -194,7 +194,7 @@ An atomic flow is
 \]
 %---
 \item\label{definition:FlowNormalForms:item:HyperStreamlined}
-\emph{hyper streamlined} if it can be represented as
+\emph{hyper streamlined}\index{streamlined!hyper} if it can be represented as
 \[
 \atomicflow{
 (-12,  9.5)*{\afawum{}{}{}{}{}{}};
