--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -28,7 +28,7 @@
 
 
 \begin{definition}\label{definition:SKS}
-System $\SKS$ is defined by the following \emph{structural} inference rules:
+System $\SKS$ is defined by the following \emph{structural}\index{inference rule!structural} inference rules:
 \[
 \vlinf{\aid}{}{\vls[a.\bar a]}{\ttt}\qquad
 \vlinf{\awd}{}{a}{\fff}\qquad
@@ -39,13 +39,13 @@ System $\SKS$ is defined by the following \emph{structural} inference rules:
 \vlinf{\awu}{}{\ttt}{a}\qquad
 \vlinf{\acu}{}{\vls(a.a)}{a}\quad,
 \]
-the \emph{logical} inference rules:
+the \emph{logical}\index{inference rule!logical} inference rules:
 \[
 \vlinf{\swi}{}{\vls[(A.B).C]}{\vls(A.[B.C])}\qquad
 \vlinf{\med}{}{\vls([A.C].[B.D])}{\vls[(A.B).(C.D)]}
 \quad,
 \]
-and the \emph{invertible} rules:
+and the \emph{invertible}\index{inference rule!invertible} rules:
 \[
 \vlinf{\coor}{}{\vls[B.A]}{\vls[A.B]}\qquad
 \vlinf{\coand}{}{\vls(B.A)}{\vls(A.B)}\qquad
