--- a/thesis.tex
+++ b/thesis.tex
@@ -3,7 +3,8 @@
 \documentclass[a4paper,11pt]{report}
 \usepackage{baththesis}
 
-%\usepackage{makeidx}
+\usepackage{makeidx}
+\makeindex
 \usepackage{fancyhdr}
 \usepackage{amsmath,amsthm}
 \usepackage{varioref}
@@ -129,8 +130,9 @@
 %\input{cut_elimination.tex}
 \part{Conclusions}
 \input{conclusions.tex}
+\printindex
 %\part{Appendices}
-\appendix
+%\appendix
 %\input{appendix_a.tex}
 %\setcounter{chapter}{2} %1- what you want
 %\input{appendix_b.tex}
