--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -43,7 +43,7 @@ let, for $1<k\le N$, $\eta_k$ be the atomic flow of\/ $\Gammasf_k$, and let
 }
 \quad,
 \]
-where, for $1\le i\le n$, $l_i$ is the number of atom occurrences in $\gamma_{k,i}$, we define the reduction $\to_{\frmis_n}$ (where $\frmis$ stands for \emph{multiple isolated subflows}) as follows, for any atomic flow $\phi$ and any connected atomic flows $\psi_1$, $\dots$, $\psi_n$ that do not contain interaction or cut vertices:
+where, for $1\le i\le n$, $l_i$ is the number of atom occurrences in $\gamma_{k,i}$, we define the reduction $\to_{\frmis_n}$ (where $\frmis$ stands for \emph{multiple isolated subflows}\index{Multiple Isolated Subflows Remover!reduction}) as follows, for any atomic flow $\phi$ and any connected atomic flows $\psi_1$, $\dots$, $\psi_n$ that do not contain interaction or cut vertices:
 
 \TODO{Decide on the direction of the dots}
 
@@ -364,7 +364,7 @@ In the following we refer to the figure in Definition~\ref{definition:MultipleIs
 %--------------------------------
 \newcommand{\MISR}{\mathsf{MISR}}
 \begin{definition}\label{definition:MultipleIsolatedSubflowsRemover}
-For every $n>0$, given the atoms, formulae and derivations described in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}, the \emph{Multiple Isolated Subflow Remover}, $\MISR_n$, is an operator whose arguments are atoms $a_1$, $\dots$, $a_n$ (that, without loss of generality, we assume coincide with the atoms given in Definition~\ref{definition:MultipleIsolatedSubflowsRemoval}), and a derivation $\Phi$ that is in simple form, but is not weakly streamlined, with respect to $a_1$, $\dots$, $a_n$, with $\ai$-decomposed form
+For every $n>0$, given the atoms, formulae and derivations described in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}, the \emph{Multiple Isolated Subflow Remover}\index{Multiple Isolated Subflows Remover!operator}, $\MISR_n$, is an operator whose arguments are atoms $a_1$, $\dots$, $a_n$ (that, without loss of generality, we assume coincide with the atoms given in Definition~\ref{definition:MultipleIsolatedSubflowsRemoval}), and a derivation $\Phi$ that is in simple form, but is not weakly streamlined, with respect to $a_1$, $\dots$, $a_n$, with $\ai$-decomposed form
 \[
 \vlder{\Phi'}{}
 {
@@ -665,7 +665,7 @@ Given the atoms, formulae and derivations described in Definition~\ref{definitio
  \item true if at least $k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are true; and
  \item false if at least $N-k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are false.
 \end{itemize}
-It follows by contradiction that $N\ge n$. Furthermore, if $N=n$, we know that $\gamma_{k,i}$ is true if and only if at least $k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are true. This would make $\gamma_{k,i}$ a \emph{threshold formula}, as we will se in the next section.
+It follows by contradiction that $N\ge n$. Furthermore, if $N=n$, we know that $\gamma_{k,i}$ is true if and only if at least $k$ of the atoms $a_1$, $\dots$, $a_{i-1}$, $a_{i+1}$, $\dots$, $a_n$ are true. This would make $\gamma_{k,i}$ a \emph{threshold formula}\index{threshold!formulae}, as we will se in the next section.
 \end{remark}
 %-----------
 
