--- a/transformations.tex
+++ b/transformations.tex
@@ -6,7 +6,7 @@
 
 %-------------------------------------------------
 \begin{definition}\label{definition:FlowReduction}
-An (\emph{atomic-flow}) \emph{reduction $R$} is a binary relation on the set of atomic flows, such that $\phi\mathrel{R}\psi$ if
+An (\emph{atomic-flow}) \emph{reduction $R$}\index{reduction} is a binary relation on the set of atomic flows, such that $\phi\mathrel{R}\psi$ if
 \begin{enumerate}
 \item
 there is a one-to-one map, $f$, from the upper edges of $\phi$ to the upper edges of $\psi$;
@@ -28,7 +28,7 @@ Given a reduction $R$ and two atomic flows $\phi$ and $\psi$, such that $\phi\ma
 
 %--------------------------------------------------
 \begin{definition}\label{definition:SoundRedcution}
-A reduction $R$ is \emph{sound} if, for every $\phi$ and $\psi$, such that $\phi\mathrel{R}\psi$, and for every derivation $\Phi$ with atomic flow $\phi$, there is a derivation $\Psi$ with atomic flow $\psi$ such that $\Phi$ and $\Psi$ have the same premiss and conclusion; in this case we write $\Phi\mathrel{R}\Psi$.
+A reduction $R$ is \emph{sound}\index{reduction!sound} if, for every $\phi$ and $\psi$, such that $\phi\mathrel{R}\psi$, and for every derivation $\Phi$ with atomic flow $\phi$, there is a derivation $\Psi$ with atomic flow $\psi$ such that $\Phi$ and $\Psi$ have the same premiss and conclusion; in this case we write $\Phi\mathrel{R}\Psi$.
 \end{definition}
 %---------------
 
@@ -532,13 +532,13 @@ This prompts us to define reduction rules for atomic flows as follows.
 
 %---------------------------------------
 \begin{definition}\label{definition:FlowReductionRule}
-An (\emph{atomic-flow}) \emph{reduction rule $r$ from flow $\phi'$ to flow $\psi'$} is a quadruple $(\phi',\psi',f,g)$ such that:
+An (\emph{atomic-flow}) \emph{reduction rule $r$ from flow $\phi'$ to flow $\psi'$}\index{reduction!rule} is a quadruple $(\phi',\psi',f,g)$ such that:
 \begin{enumerate}
 \item $f$ is a one-to-one map from the upper edges of $\phi'$ to the upper edges of $\psi'$,
 \item $g$ is a one-to-one map from the lower edges of $\phi'$ to the lower edges of $\psi'$,
 \item for every polarity assignment $\pi$ for $\phi'$, there is a polarity assignment $\pi'$ for $\psi'$ such that $\pi'(f(\epsilon))=\pi(\epsilon)$ and $\pi'(g(\epsilon'))=\pi(\epsilon')$, for any upper edge $\epsilon$ and any lower edge $\epsilon'$ of $\phi'$;
 \end{enumerate}
-we define reduction rules with graphical expressions $r\colon\phi'\to\psi'$, where $f$ and $g$ are indicated by labelling edges. For every reduction rule $r\colon\phi'\to\psi'$, the reduction ${\to_r}$ is defined, such that $\phi\to_r\psi$ if and only if $\phi'$ appears as a subgraph in $\phi$ and we obtain $\psi$ by replacing $\phi'$ with $\psi'$ in $\phi$, while respecting the correspondence of edges; we call this operation a \emph{reduction by $r$}.
+we define reduction rules with graphical expressions $r\colon\phi'\to\psi'$, where $f$ and $g$ are indicated by labelling edges. For every reduction rule $r\colon\phi'\to\psi'$, the reduction ${\to_r}$ is defined, such that $\phi\to_r\psi$ if and only if $\phi'$ appears as a subgraph in $\phi$ and we obtain $\psi$ by replacing $\phi'$ with $\psi'$ in $\phi$, while respecting the correspondence of edges; we call this operation a \emph{reduction by $r$}\index{reduction!by rule}.
 \end{definition}
 
 \TODO{Consider making a remark about conserving polarity assignments.}
@@ -595,7 +595,7 @@ The graphical expressions in Figure~\vref{figure:ReductionRules} are atomic-flow
 
 %---------------------------------------
 \begin{definition}\label{definition:FlowRewritingSystem}
-A finite set of reduction rules is a \emph{flow rewriting system}. For every flow rewriting system $F=\{r_1,\dots,r_h\}$ we define ${\to_F}={\to_{r_1}\cup\cdots\cup{\to_{r_h}}}$. The reflexive transitive closure of $\to_F$ is denoted by $\to_F^\star$. Given a set of atomic flows $S$, we say that a flow rewriting system $F$ is \emph{terminating on $S$} if there is no infinite chain $\phi_1\to_F\phi_2\to_F\cdots$, for every $\phi_1\in S$; if $F$ is terminating on the set of atomic flows, we say that it is \emph{terminating}. We say that atomic flow $\phi$ is \emph{normal} for flow rewriting system $F$ if there is no atomic flow $\psi$ such that $\phi\to_F\psi$.
+A finite set of reduction rules is a \emph{flow rewriting system}\index{flow rewriting system}. For every flow rewriting system $F=\{r_1,\dots,r_h\}$ we define ${\to_F}={\to_{r_1}\cup\cdots\cup{\to_{r_h}}}$. The reflexive transitive closure of $\to_F$ is denoted by $\to_F^\star$. Given a set of atomic flows $S$, we say that a flow rewriting system $F$ is \emph{terminating on $S$}\index{flow rewriting system!terminating} if there is no infinite chain $\phi_1\to_F\phi_2\to_F\cdots$, for every $\phi_1\in S$; if $F$ is terminating on the set of atomic flows, we say that it is \emph{terminating}. We say that atomic flow $\phi$ is \emph{normal}\index{flow rewriting system!normal} for flow rewriting system $F$ if there is no atomic flow $\psi$ such that $\phi\to_F\psi$.
 \end{definition}
 
 \newcommand{\frw}{{\mathsf w}}
@@ -622,7 +622,7 @@ The following flow rewriting system is called $\frc$:
 
 %---------------------------------------
 \begin{definition}\label{definition:SoundRedcutionRule}
-A reduction rule $r$ is \emph{sound} if $\to_r$ is sound.
+A reduction rule $r$ is \emph{sound}\index{reduction!rule!sound} if $\to_r$ is sound.
 \end{definition}
 
 The proof of the following theorem is essentially contained in Figures~\vref{figure:ReductionRulesWeakening} and \vref{figure:ReductionRulesContraction}.
